0.6/_sources/user-guide/vision/auto_tutorials/plot_custom_checks.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/vision/auto_tutorials/plot_custom_checks.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_user-guide_vision_auto_tutorials_plot_custom_checks.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_vision_auto_tutorials_plot_custom_checks.py:


=============================================
Writing Custom Computer Vision Checks
=============================================

Deepchecks offers a wide range of checks for computer vision problems, addressing distribution issues, performance
checks and more. Nevertheless, in order to fully validate your ML pipeline you often need to write your own checks.
This guide will walk you through the basics of writing your own checks.

We recommend writing a single check for each aspect of the model or data you would like to validate. As explained in
:doc:`/user-guide/general/deepchecks_hierarchy`, the role of the check is to run the logic and output a display and
a pythonic value. Then, a condition can be defined on that value to determine if the check is successful or not.

1. `Vision Checks Structure <#vision-checks-structure>`__
2. `Write a Basic Check <#write-a-basic-check>`__
3. `Check Display <#check-display>`__
4. `Defining a Condition <#defining-a-condition>`__
5. `Base Checks Types <#base-checks-types>`__

Vision Checks Structure
========================

The first step when writing a vision check is to decide what check base class to use. You can read more in the
`Base Checks Types <#base-checks-types>`__ section. In this case, we wish to compare train and test dataset, so we select the
``TrainTestBaseCheck``. This type of check must implement the following three methods:

- initialize_run - Actions to be performed before starting to iterate over the dataloader batches.
- update - Actions to be performed on each batch.
- compute - Actions to be performed after iterating over all the batches. Returns the check display and the return
  value.

While `ModelOnlyCheck` alone do not implement the update method. Apart from that, the check init should recipient and
handle check parameters.


Write a Basic Check
========================

Let's implement a simple check, comparing the average of each color channel between the train and the test dataset.

We'll start by writing the simplest possible example, returning only a dict of the color averages. We'll use external
functions when implementing the check in order to be able to reuse them later.

**Good to know: the return value of a check can be any object, a number, dictionary, string, etc…**

.. GENERATED FROM PYTHON SOURCE LINES 46-116

.. code-block:: default

    import typing as t

    import numpy as np

    from deepchecks.core.check_result import CheckResult
    from deepchecks.core.checks import DatasetKind
    from deepchecks.core.condition import ConditionCategory
    from deepchecks.vision.base_checks import TrainTestCheck
    from deepchecks.vision.batch_wrapper import Batch
    from deepchecks.vision.context import Context


    def init_color_averages_dict() -> t.Dict[str, np.array]:
        """Initialize the color averages dicts."""
        return {
                DatasetKind.TRAIN.value: np.zeros((3,), dtype=np.float64),
                DatasetKind.TEST.value: np.zeros((3,), dtype=np.float64),
        }


    def init_pixel_counts_dict() -> t.Dict[str, int]:
        """Initialize the pixel counts dicts."""
        return {
                DatasetKind.TRAIN.value: 0,
                DatasetKind.TEST.value: 0,
        }


    def sum_pixel_values(batch: Batch) -> np.array:
        """Sum the values of all the pixels in the batch, returning a numpy array with an entry per channel."""
        images = batch.images
        return sum(image.sum(axis=(0, 1)) for image in images)  # sum over the batch and pixels


    def count_pixels_in_batch(batch: Batch) -> int:
        """Count the pixels in the batch."""
        return sum((image.shape[0] * image.shape[1] for image in batch.images))


    class ColorAveragesCheck(TrainTestCheck):
        """Check if the average of each color channel is the same between the train and test dataset."""

        def __init__(self, channel_names: t.Tuple[str] = None):
            """Init the check and enable customization of the channel_names."""
            super().__init__()
            if channel_names is None:
                self.channel_names = ('R', 'G', 'B')

        def initialize_run(self, context: Context):
            """Initialize the color_averages dict and pixel counter dict."""
            self._color_averages = init_color_averages_dict()
            self._pixel_count = init_pixel_counts_dict()

        def update(self, context: Context, batch: Batch, dataset_kind: DatasetKind):
            """Add the batch color counts to the color_averages dict, and update counter."""

            self._color_averages[dataset_kind.value] += sum_pixel_values(batch)  # add to the color_averages dict
            # count the number of pixels we have summed
            self._pixel_count[dataset_kind.value] += count_pixels_in_batch(batch)

        def compute(self, context: Context):
            """Compute the color averages and return them."""
            # Divide by the number of pixels to get the average pixel value per color channel
            for dataset_kind in DatasetKind:
                self._color_averages[dataset_kind.value] /= self._pixel_count[dataset_kind.value]
            # Return the color averages in a dict by channel name
            return_value = {d_kind: dict(zip(self.channel_names, color_averages))
                            for d_kind, color_averages in self._color_averages.items()}
            return CheckResult(return_value)








.. GENERATED FROM PYTHON SOURCE LINES 117-118

Hooray! we just implemented a custom check. To read more about the internal objects  Let's run it and see what happens:

.. GENERATED FROM PYTHON SOURCE LINES 118-127

.. code-block:: default


    from deepchecks.vision.datasets.detection.coco import load_dataset

    train_ds = load_dataset(train=True, object_type='VisionData')
    test_ds = load_dataset(train=False, object_type='VisionData')

    result = ColorAveragesCheck().run(train_ds, test_ds)
    result





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Validating Input:   0%| | 0/1 [00:00<?, ? /s]                                                 Ingesting Batches - Train Dataset:   0%|  | 0/2 [00:00<?, ? Batch/s]    Ingesting Batches - Train Dataset:  50%|# | 1/2 [00:00<00:00,  2.32 Batch/s]    Ingesting Batches - Train Dataset: 100%|##| 2/2 [00:00<00:00,  2.42 Batch/s]                                                                                Ingesting Batches - Test Dataset:   0%|  | 0/2 [00:00<?, ? Batch/s]    Ingesting Batches - Test Dataset:  50%|# | 1/2 [00:00<00:00,  2.73 Batch/s]    Ingesting Batches - Test Dataset: 100%|##| 2/2 [00:00<00:00,  2.54 Batch/s]                                                                               Computing Check:   0%| | 0/1 [00:00<?, ? Check/s]                                                 

.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    <script
        src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"
        integrity="sha512-c3Nl8+7g4LMSTdrm621y7kf9v3SDPnhxLNhcjFJbKECVnmZHTdo+IRO05sNLTH/D3vA6u1X32ehoLC7WFVdheg=="
        crossorigin="anonymous"
        referrerpolicy="no-referrer">
    </script>

    <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
    <script type="text/javascript">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: "STIX-Web"}});}</script>
    <script type="text/javascript">
        if (typeof require !== 'undefined') {
            require.undef("plotly");
            requirejs.config({
                paths: {'plotly': ['https://cdn.plot.ly/plotly-2.8.3.min']}
            });
            require(
                ['plotly'],
                function(Plotly) {
                    window._Plotly = Plotly;
                    window.Plotly = Plotly;
                    console.log('Loaded plotly successfully');
                },
                function() {console.log('Failed to load plotly')}
            );
        } else {
            console.log('requirejs is not present');
        }
    </script>
    <h4><b>Color Averages Check</b></h4><p>Check if the average of each color channel is the same between the train and test dataset.</p><h5><b>Additional Outputs</b></h5><p><b>&#x2713;</b>Nothing to display</p>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 128-131

Our check ran successfully, but we got the print “Nothing found”. This is because we haven’t defined to the check
anything to display, so the default behavior is to print “Nothing found”. In order to access the value that we have
defined earlier we can use the “value” property on the result.

.. GENERATED FROM PYTHON SOURCE LINES 131-135

.. code-block:: default


    result.value






.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'Train': {'R': 120.59282480343832, 'G': 117.66383923861159, 'B': 102.58390542973886}, 'Test': {'R': 114.69132386085319, 'G': 107.46618940457067, 'B': 97.39751220459796}}



.. GENERATED FROM PYTHON SOURCE LINES 136-137

favorite checks from our :doc:`API ref <../../../api/deepchecks.vision>`.

.. GENERATED FROM PYTHON SOURCE LINES 139-148

Check Display
========================

Most of the times we will want our checks to have a visual display that will quickly summarize the check result. We
can pass objects for display to the CheckResult. Objects for display should be of type: html string, dataframe or a
function that plots a graph. Let’s define a graph that will be displayed using `Plotly <https://plotly.com/>`_. We
will inherit from the original check to shorten the code an update only the compute method.

**Good to know: ``display`` can receive a single object to display or a list of objects**

.. GENERATED FROM PYTHON SOURCE LINES 148-193

.. code-block:: default


    import pandas as pd
    import plotly.express as px


    class ColorAveragesCheck(TrainTestCheck):
        """Check if the average of each color channel is the same between the train and test dataset."""

        def __init__(self, channel_names: t.Tuple[str] = None):
            """Init the check and enable customization of the channel_names."""
            super().__init__()
            if channel_names is None:
                self.channel_names = ('R', 'G', 'B')

        def initialize_run(self, context: Context):
            """Initialize the color_averages dict and pixel counter dict."""
            self._color_averages = init_color_averages_dict()
            self._pixel_count = init_pixel_counts_dict()

        def update(self, context: Context, batch: Batch, dataset_kind: DatasetKind):
            """Add the batch color counts to the color_averages dict, and update counter."""

            self._color_averages[dataset_kind.value] += sum_pixel_values(batch)  # add to the color_averages dict
            # count the number of pixels we have summed
            self._pixel_count[dataset_kind.value] += count_pixels_in_batch(batch)

        def compute(self, context: Context):
            """Compute the color averages and return them. Also display a histogram comparing train and test."""
            # Divide by the number of pixels to get the average pixel value per color channel
            for dataset_kind in DatasetKind:
                self._color_averages[dataset_kind.value] /= self._pixel_count[dataset_kind.value]
            # Return the color averages in a dict by channel name
            return_value = {d_kind: dict(zip(self.channel_names, color_averages))
                            for d_kind, color_averages in self._color_averages.items()}

            # **New Code Here**!!!
            # ========================
            # Display a histogram comparing train and test
            color_averages_df = pd.DataFrame(return_value).unstack().reset_index()
            color_averages_df.columns = ['Dataset', 'Channel', 'Pixel Value']
            fig = px.histogram(color_averages_df, x='Dataset', y='Pixel Value', color='Channel', barmode='group',
                               histfunc='avg', color_discrete_sequence=['rgb(255,0,0)', 'rgb(0,255,0)', 'rgb(0,0,255)'],
                               title='Color Averages Histogram')
            return CheckResult(return_value, display=[fig])








.. GENERATED FROM PYTHON SOURCE LINES 194-195

Let check it out:

.. GENERATED FROM PYTHON SOURCE LINES 195-199

.. code-block:: default


    result = ColorAveragesCheck().run(train_ds, test_ds)
    result





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Validating Input:   0%| | 0/1 [00:00<?, ? /s]                                                 Ingesting Batches - Train Dataset:   0%|  | 0/2 [00:00<?, ? Batch/s]    Ingesting Batches - Train Dataset:  50%|# | 1/2 [00:00<00:00,  2.33 Batch/s]    Ingesting Batches - Train Dataset: 100%|##| 2/2 [00:00<00:00,  2.44 Batch/s]                                                                                Ingesting Batches - Test Dataset:   0%|  | 0/2 [00:00<?, ? Batch/s]    Ingesting Batches - Test Dataset:  50%|# | 1/2 [00:00<00:00,  2.75 Batch/s]    Ingesting Batches - Test Dataset: 100%|##| 2/2 [00:00<00:00,  2.55 Batch/s]                                                                               Computing Check:   0%| | 0/1 [00:00<?, ? Check/s]                                                 

.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    <script
        src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"
        integrity="sha512-c3Nl8+7g4LMSTdrm621y7kf9v3SDPnhxLNhcjFJbKECVnmZHTdo+IRO05sNLTH/D3vA6u1X32ehoLC7WFVdheg=="
        crossorigin="anonymous"
        referrerpolicy="no-referrer">
    </script>

    <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
    <script type="text/javascript">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: "STIX-Web"}});}</script>
    <script type="text/javascript">
        if (typeof require !== 'undefined') {
            require.undef("plotly");
            requirejs.config({
                paths: {'plotly': ['https://cdn.plot.ly/plotly-2.8.3.min']}
            });
            require(
                ['plotly'],
                function(Plotly) {
                    window._Plotly = Plotly;
                    window.Plotly = Plotly;
                    console.log('Loaded plotly successfully');
                },
                function() {console.log('Failed to load plotly')}
            );
        } else {
            console.log('requirejs is not present');
        }
    </script>
    <h4><b>Color Averages Check</b></h4><p>Check if the average of each color channel is the same between the train and test dataset.</p><h5><b>Additional Outputs</b></h5><div>                            <div id="1913ad95-4536-4f27-9d90-2f6be8fee418" class="plotly-graph-div" style="height:525px; width:100%;"></div>            <script type="text/javascript">                require(["plotly"], function(Plotly) {                    window.PLOTLYENV=window.PLOTLYENV || {};                                    if (document.getElementById("1913ad95-4536-4f27-9d90-2f6be8fee418")) {                    Plotly.newPlot(                        "1913ad95-4536-4f27-9d90-2f6be8fee418",                        [{"alignmentgroup":"True","bingroup":"x","histfunc":"avg","hovertemplate":"Channel=R<br>Dataset=%{x}<br>avg of Pixel Value=%{y}<extra></extra>","legendgroup":"R","marker":{"color":"rgb(255,0,0)","pattern":{"shape":""}},"name":"R","offsetgroup":"R","orientation":"v","showlegend":true,"x":["Train","Test"],"xaxis":"x","y":[120.59282480343832,114.69132386085319],"yaxis":"y","type":"histogram"},{"alignmentgroup":"True","bingroup":"x","histfunc":"avg","hovertemplate":"Channel=G<br>Dataset=%{x}<br>avg of Pixel Value=%{y}<extra></extra>","legendgroup":"G","marker":{"color":"rgb(0,255,0)","pattern":{"shape":""}},"name":"G","offsetgroup":"G","orientation":"v","showlegend":true,"x":["Train","Test"],"xaxis":"x","y":[117.66383923861159,107.46618940457067],"yaxis":"y","type":"histogram"},{"alignmentgroup":"True","bingroup":"x","histfunc":"avg","hovertemplate":"Channel=B<br>Dataset=%{x}<br>avg of Pixel Value=%{y}<extra></extra>","legendgroup":"B","marker":{"color":"rgb(0,0,255)","pattern":{"shape":""}},"name":"B","offsetgroup":"B","orientation":"v","showlegend":true,"x":["Train","Test"],"xaxis":"x","y":[102.58390542973886,97.39751220459796],"yaxis":"y","type":"histogram"}],                        {"template":{"data":{"bar":[{"error_x":{"color":"#2a3f5f"},"error_y":{"color":"#2a3f5f"},"marker":{"line":{"color":"#E5ECF6","width":0.5},"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"bar"}],"barpolar":[{"marker":{"line":{"color":"#E5ECF6","width":0.5},"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"barpolar"}],"carpet":[{"aaxis":{"endlinecolor":"#2a3f5f","gridcolor":"white","linecolor":"white","minorgridcolor":"white","startlinecolor":"#2a3f5f"},"baxis":{"endlinecolor":"#2a3f5f","gridcolor":"white","linecolor":"white","minorgridcolor":"white","startlinecolor":"#2a3f5f"},"type":"carpet"}],"choropleth":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"choropleth"}],"contour":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"contour"}],"contourcarpet":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"contourcarpet"}],"heatmap":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"heatmap"}],"heatmapgl":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"heatmapgl"}],"histogram":[{"marker":{"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"histogram"}],"histogram2d":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"histogram2d"}],"histogram2dcontour":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"histogram2dcontour"}],"mesh3d":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"mesh3d"}],"parcoords":[{"line":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"parcoords"}],"pie":[{"automargin":true,"type":"pie"}],"scatter":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatter"}],"scatter3d":[{"line":{"colorbar":{"outlinewidth":0,"ticks":""}},"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatter3d"}],"scattercarpet":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattercarpet"}],"scattergeo":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattergeo"}],"scattergl":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattergl"}],"scattermapbox":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattermapbox"}],"scatterpolar":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterpolar"}],"scatterpolargl":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterpolargl"}],"scatterternary":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterternary"}],"surface":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"surface"}],"table":[{"cells":{"fill":{"color":"#EBF0F8"},"line":{"color":"white"}},"header":{"fill":{"color":"#C8D4E3"},"line":{"color":"white"}},"type":"table"}]},"layout":{"annotationdefaults":{"arrowcolor":"#2a3f5f","arrowhead":0,"arrowwidth":1},"autotypenumbers":"strict","coloraxis":{"colorbar":{"outlinewidth":0,"ticks":""}},"colorscale":{"diverging":[[0,"#8e0152"],[0.1,"#c51b7d"],[0.2,"#de77ae"],[0.3,"#f1b6da"],[0.4,"#fde0ef"],[0.5,"#f7f7f7"],[0.6,"#e6f5d0"],[0.7,"#b8e186"],[0.8,"#7fbc41"],[0.9,"#4d9221"],[1,"#276419"]],"sequential":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"sequentialminus":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]},"colorway":["#636efa","#EF553B","#00cc96","#ab63fa","#FFA15A","#19d3f3","#FF6692","#B6E880","#FF97FF","#FECB52"],"font":{"color":"#2a3f5f"},"geo":{"bgcolor":"white","lakecolor":"white","landcolor":"#E5ECF6","showlakes":true,"showland":true,"subunitcolor":"white"},"hoverlabel":{"align":"left"},"hovermode":"closest","mapbox":{"style":"light"},"paper_bgcolor":"white","plot_bgcolor":"#E5ECF6","polar":{"angularaxis":{"gridcolor":"white","linecolor":"white","ticks":""},"bgcolor":"#E5ECF6","radialaxis":{"gridcolor":"white","linecolor":"white","ticks":""}},"scene":{"xaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"},"yaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"},"zaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"}},"shapedefaults":{"line":{"color":"#2a3f5f"}},"ternary":{"aaxis":{"gridcolor":"white","linecolor":"white","ticks":""},"baxis":{"gridcolor":"white","linecolor":"white","ticks":""},"bgcolor":"#E5ECF6","caxis":{"gridcolor":"white","linecolor":"white","ticks":""}},"title":{"x":0.05},"xaxis":{"automargin":true,"gridcolor":"white","linecolor":"white","ticks":"","title":{"standoff":15},"zerolinecolor":"white","zerolinewidth":2},"yaxis":{"automargin":true,"gridcolor":"white","linecolor":"white","ticks":"","title":{"standoff":15},"zerolinecolor":"white","zerolinewidth":2}}},"xaxis":{"anchor":"y","domain":[0.0,1.0],"title":{"text":"Dataset"}},"yaxis":{"anchor":"x","domain":[0.0,1.0],"title":{"text":"avg of Pixel Value"}},"legend":{"title":{"text":"Channel"},"tracegroupgap":0},"title":{"text":"Color Averages Histogram"},"barmode":"group"},                        {"responsive": true}                    ).then(function(){
                            
    var gd = document.getElementById('1913ad95-4536-4f27-9d90-2f6be8fee418');
    var x = new MutationObserver(function (mutations, observer) {{
            var display = window.getComputedStyle(gd).display;
            if (!display || display === 'none') {{
                console.log([gd, 'removed!']);
                Plotly.purge(gd);
                observer.disconnect();
            }}
    }});

    // Listen for the removal of the full notebook cells
    var notebookContainer = gd.closest('#notebook-container');
    if (notebookContainer) {{
        x.observe(notebookContainer, {childList: true});
    }}

    // Listen for the clearing of the current output cell
    var outputEl = gd.closest('.output');
    if (outputEl) {{
        x.observe(outputEl, {childList: true});
    }}

                            })                };                });            </script>        </div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 200-202

Voilà! Now we have a check that prints a graph and has a value. We can add this check
to any Suite, and it will run within it.

.. GENERATED FROM PYTHON SOURCE LINES 204-211

Defining a Condition
========================

Finally, we can add a condition to our check. A condition is a function that receives the result of the check and
returns a condition result object. To read more on conditions, check out the condition `user guide
<../../user-guide/general/customizations/configure_check_conditions>`_. In this case, we'll define a condition
verifying that the color averages haven't changed by more than 10%.

.. GENERATED FROM PYTHON SOURCE LINES 211-275

.. code-block:: default


    from deepchecks.core import ConditionResult


    class ColorAveragesCheck(TrainTestCheck):
        """Check if the average of each color channel is the same between the train and test dataset."""

        def __init__(self, channel_names: t.Tuple[str] = None):
            """Init the check and enable customization of the channel_names."""
            super().__init__()
            if channel_names is None:
                self.channel_names = ('R', 'G', 'B')

        def initialize_run(self, context: Context):
            """Initialize the color_averages dict and pixel counter dict."""
            self._color_averages = init_color_averages_dict()
            self._pixel_count = init_pixel_counts_dict()

        def update(self, context: Context, batch: Batch, dataset_kind: DatasetKind):
            """Add the batch color counts to the color_averages dict, and update counter."""

            self._color_averages[dataset_kind.value] += sum_pixel_values(batch)  # add to the color_averages dict
            # count the number of pixels we have summed
            self._pixel_count[dataset_kind.value] += count_pixels_in_batch(batch)

        def compute(self, context: Context):
            """Compute the color averages and return them. Also display a histogram comparing train and test."""
            # Divide by the number of pixels to get the average pixel value per color channel
            for dataset_kind in DatasetKind:
                self._color_averages[dataset_kind.value] /= self._pixel_count[dataset_kind.value]
            # Return the color averages in a dict by channel name
            return_value = {d_kind: dict(zip(self.channel_names, color_averages))
                            for d_kind, color_averages in self._color_averages.items()}

            # Display a histogram comparing train and test
            color_averages_df = pd.DataFrame(return_value).unstack().reset_index()
            color_averages_df.columns = ['Dataset', 'Channel', 'Pixel Value']
            fig = px.histogram(color_averages_df, x='Dataset', y='Pixel Value', color='Channel', barmode='group',
                               histfunc='avg', color_discrete_sequence=['rgb(255,0,0)', 'rgb(0,255,0)', 'rgb(0,0,255)'],
                               title='Color Averages Histogram')
            return CheckResult(return_value, display=[fig])

        # **New Code Here**!!!
        # ========================
        def add_condition_color_average_change_not_greater_than(self, change_ratio: float = 0.1) -> ConditionResult:
            """Add a condition verifying that the color averages haven't changed by more than change_ratio%."""

            def condition(check_result: CheckResult) -> ConditionResult:
                failing_channels = []
                # Iterate over the color averages and verify that they haven't changed by more than change_ratio
                for channel in check_result.value[DatasetKind.TRAIN.value].keys():
                    if abs(check_result.value[DatasetKind.TRAIN.value][channel] -
                           check_result.value[DatasetKind.TEST.value][channel]) > change_ratio:
                        failing_channels.append(channel)

                # If there are failing channels, return a condition result with the failing channels
                if failing_channels:
                    return ConditionResult(ConditionCategory.FAIL, f'The color averages have changes by more than threshold in the channels'
                                                  f' {failing_channels}.')
                else:
                    return ConditionResult(ConditionCategory.PASS)

            return self.add_condition(f'Change in color averages not greater than {change_ratio:.2%}', condition)








.. GENERATED FROM PYTHON SOURCE LINES 276-277

Let check it out:

.. GENERATED FROM PYTHON SOURCE LINES 277-280

.. code-block:: default

    result = ColorAveragesCheck().run(train_ds, test_ds)
    result





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Validating Input:   0%| | 0/1 [00:00<?, ? /s]                                                 Ingesting Batches - Train Dataset:   0%|  | 0/2 [00:00<?, ? Batch/s]    Ingesting Batches - Train Dataset:  50%|# | 1/2 [00:00<00:00,  2.34 Batch/s]    Ingesting Batches - Train Dataset: 100%|##| 2/2 [00:00<00:00,  2.45 Batch/s]                                                                                Ingesting Batches - Test Dataset:   0%|  | 0/2 [00:00<?, ? Batch/s]    Ingesting Batches - Test Dataset:  50%|# | 1/2 [00:00<00:00,  2.76 Batch/s]    Ingesting Batches - Test Dataset: 100%|##| 2/2 [00:00<00:00,  2.56 Batch/s]                                                                               Computing Check:   0%| | 0/1 [00:00<?, ? Check/s]                                                 

.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    <script
        src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"
        integrity="sha512-c3Nl8+7g4LMSTdrm621y7kf9v3SDPnhxLNhcjFJbKECVnmZHTdo+IRO05sNLTH/D3vA6u1X32ehoLC7WFVdheg=="
        crossorigin="anonymous"
        referrerpolicy="no-referrer">
    </script>

    <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
    <script type="text/javascript">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: "STIX-Web"}});}</script>
    <script type="text/javascript">
        if (typeof require !== 'undefined') {
            require.undef("plotly");
            requirejs.config({
                paths: {'plotly': ['https://cdn.plot.ly/plotly-2.8.3.min']}
            });
            require(
                ['plotly'],
                function(Plotly) {
                    window._Plotly = Plotly;
                    window.Plotly = Plotly;
                    console.log('Loaded plotly successfully');
                },
                function() {console.log('Failed to load plotly')}
            );
        } else {
            console.log('requirejs is not present');
        }
    </script>
    <h4><b>Color Averages Check</b></h4><p>Check if the average of each color channel is the same between the train and test dataset.</p><h5><b>Additional Outputs</b></h5><div>                            <div id="876c8007-62aa-42bf-aa0d-d707ef50de76" class="plotly-graph-div" style="height:525px; width:100%;"></div>            <script type="text/javascript">                require(["plotly"], function(Plotly) {                    window.PLOTLYENV=window.PLOTLYENV || {};                                    if (document.getElementById("876c8007-62aa-42bf-aa0d-d707ef50de76")) {                    Plotly.newPlot(                        "876c8007-62aa-42bf-aa0d-d707ef50de76",                        [{"alignmentgroup":"True","bingroup":"x","histfunc":"avg","hovertemplate":"Channel=R<br>Dataset=%{x}<br>avg of Pixel Value=%{y}<extra></extra>","legendgroup":"R","marker":{"color":"rgb(255,0,0)","pattern":{"shape":""}},"name":"R","offsetgroup":"R","orientation":"v","showlegend":true,"x":["Train","Test"],"xaxis":"x","y":[120.59282480343832,114.69132386085319],"yaxis":"y","type":"histogram"},{"alignmentgroup":"True","bingroup":"x","histfunc":"avg","hovertemplate":"Channel=G<br>Dataset=%{x}<br>avg of Pixel Value=%{y}<extra></extra>","legendgroup":"G","marker":{"color":"rgb(0,255,0)","pattern":{"shape":""}},"name":"G","offsetgroup":"G","orientation":"v","showlegend":true,"x":["Train","Test"],"xaxis":"x","y":[117.66383923861159,107.46618940457067],"yaxis":"y","type":"histogram"},{"alignmentgroup":"True","bingroup":"x","histfunc":"avg","hovertemplate":"Channel=B<br>Dataset=%{x}<br>avg of Pixel Value=%{y}<extra></extra>","legendgroup":"B","marker":{"color":"rgb(0,0,255)","pattern":{"shape":""}},"name":"B","offsetgroup":"B","orientation":"v","showlegend":true,"x":["Train","Test"],"xaxis":"x","y":[102.58390542973886,97.39751220459796],"yaxis":"y","type":"histogram"}],                        {"template":{"data":{"bar":[{"error_x":{"color":"#2a3f5f"},"error_y":{"color":"#2a3f5f"},"marker":{"line":{"color":"#E5ECF6","width":0.5},"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"bar"}],"barpolar":[{"marker":{"line":{"color":"#E5ECF6","width":0.5},"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"barpolar"}],"carpet":[{"aaxis":{"endlinecolor":"#2a3f5f","gridcolor":"white","linecolor":"white","minorgridcolor":"white","startlinecolor":"#2a3f5f"},"baxis":{"endlinecolor":"#2a3f5f","gridcolor":"white","linecolor":"white","minorgridcolor":"white","startlinecolor":"#2a3f5f"},"type":"carpet"}],"choropleth":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"choropleth"}],"contour":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"contour"}],"contourcarpet":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"contourcarpet"}],"heatmap":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"heatmap"}],"heatmapgl":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"heatmapgl"}],"histogram":[{"marker":{"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"histogram"}],"histogram2d":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"histogram2d"}],"histogram2dcontour":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"histogram2dcontour"}],"mesh3d":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"mesh3d"}],"parcoords":[{"line":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"parcoords"}],"pie":[{"automargin":true,"type":"pie"}],"scatter":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatter"}],"scatter3d":[{"line":{"colorbar":{"outlinewidth":0,"ticks":""}},"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatter3d"}],"scattercarpet":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattercarpet"}],"scattergeo":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattergeo"}],"scattergl":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattergl"}],"scattermapbox":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattermapbox"}],"scatterpolar":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterpolar"}],"scatterpolargl":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterpolargl"}],"scatterternary":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterternary"}],"surface":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"surface"}],"table":[{"cells":{"fill":{"color":"#EBF0F8"},"line":{"color":"white"}},"header":{"fill":{"color":"#C8D4E3"},"line":{"color":"white"}},"type":"table"}]},"layout":{"annotationdefaults":{"arrowcolor":"#2a3f5f","arrowhead":0,"arrowwidth":1},"autotypenumbers":"strict","coloraxis":{"colorbar":{"outlinewidth":0,"ticks":""}},"colorscale":{"diverging":[[0,"#8e0152"],[0.1,"#c51b7d"],[0.2,"#de77ae"],[0.3,"#f1b6da"],[0.4,"#fde0ef"],[0.5,"#f7f7f7"],[0.6,"#e6f5d0"],[0.7,"#b8e186"],[0.8,"#7fbc41"],[0.9,"#4d9221"],[1,"#276419"]],"sequential":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"sequentialminus":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]},"colorway":["#636efa","#EF553B","#00cc96","#ab63fa","#FFA15A","#19d3f3","#FF6692","#B6E880","#FF97FF","#FECB52"],"font":{"color":"#2a3f5f"},"geo":{"bgcolor":"white","lakecolor":"white","landcolor":"#E5ECF6","showlakes":true,"showland":true,"subunitcolor":"white"},"hoverlabel":{"align":"left"},"hovermode":"closest","mapbox":{"style":"light"},"paper_bgcolor":"white","plot_bgcolor":"#E5ECF6","polar":{"angularaxis":{"gridcolor":"white","linecolor":"white","ticks":""},"bgcolor":"#E5ECF6","radialaxis":{"gridcolor":"white","linecolor":"white","ticks":""}},"scene":{"xaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"},"yaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"},"zaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"}},"shapedefaults":{"line":{"color":"#2a3f5f"}},"ternary":{"aaxis":{"gridcolor":"white","linecolor":"white","ticks":""},"baxis":{"gridcolor":"white","linecolor":"white","ticks":""},"bgcolor":"#E5ECF6","caxis":{"gridcolor":"white","linecolor":"white","ticks":""}},"title":{"x":0.05},"xaxis":{"automargin":true,"gridcolor":"white","linecolor":"white","ticks":"","title":{"standoff":15},"zerolinecolor":"white","zerolinewidth":2},"yaxis":{"automargin":true,"gridcolor":"white","linecolor":"white","ticks":"","title":{"standoff":15},"zerolinecolor":"white","zerolinewidth":2}}},"xaxis":{"anchor":"y","domain":[0.0,1.0],"title":{"text":"Dataset"}},"yaxis":{"anchor":"x","domain":[0.0,1.0],"title":{"text":"avg of Pixel Value"}},"legend":{"title":{"text":"Channel"},"tracegroupgap":0},"title":{"text":"Color Averages Histogram"},"barmode":"group"},                        {"responsive": true}                    ).then(function(){
                            
    var gd = document.getElementById('876c8007-62aa-42bf-aa0d-d707ef50de76');
    var x = new MutationObserver(function (mutations, observer) {{
            var display = window.getComputedStyle(gd).display;
            if (!display || display === 'none') {{
                console.log([gd, 'removed!']);
                Plotly.purge(gd);
                observer.disconnect();
            }}
    }});

    // Listen for the removal of the full notebook cells
    var notebookContainer = gd.closest('#notebook-container');
    if (notebookContainer) {{
        x.observe(notebookContainer, {childList: true});
    }}

    // Listen for the clearing of the current output cell
    var outputEl = gd.closest('.output');
    if (outputEl) {{
        x.observe(outputEl, {childList: true});
    }}

                            })                };                });            </script>        </div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 281-282

And now our check we will alert us automatically if the color averages have changed by more than 10%!

.. GENERATED FROM PYTHON SOURCE LINES 285-298

Base Checks Types
==================
Vision checks all inherit from one of the following classes:

- :class:`~deepchecks.vision.base_checks.SingleDatasetCheck` - Check that runs on a single dataset and model.
- :class:`~deepchecks.vision.base_checks.TrainTestCheck` - Check that runs on a train and test dataset and model.
- :class:`~deepchecks.vision.base_checks.ModelOnlyCheck` - Check that runs on only a model .

All three classes inherit from the :class:`~deepchecks.core.checks.BaseCheck` BaseCheck, same as checks in any other
deepchecks subpackage. Each has its own run signature, according to the objects on which it will run.

The first two classes of checks run some logic on the image data, and so the check structure is designed to enable
accumulating and computation on batches outputted by the dataloader.


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  5.398 seconds)


.. _sphx_glr_download_user-guide_vision_auto_tutorials_plot_custom_checks.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_custom_checks.py <plot_custom_checks.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_custom_checks.ipynb <plot_custom_checks.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
